[project]
name = "coverage-map"
version = "0.3.0"
description = "Map source files to tests using coverage context tracking"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Ben Thomasson", email = "bthomass@redhat.com" }
]
keywords = ["coverage", "testing", "pytest", "mapping"]

dependencies = [
    "click>=8.0",
    "coverage>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
coverage-map = "coverage_map.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coverage_map"]
